index ローディングアニメ実装

--- a/_dev/_ejs/index.ejs
+++ b/_dev/_ejs/index.ejs
@@ -30,7 +30,7 @@ $scripts=null;
                   <span class="firstRow">DEVELOP</span><span class="secondRow">FOR THE</span>
                   <span class="lastRow">FUTURE.</span>
                </p>
-               <h2 class="mainvisual_copy_ja">未来を拓くエンジニアスキル</h2>
+               <h2 class="mainvisual_copy_ja">未来を拓くエンジニアスキル。</h2>
             </div>
          </div>
          <!-- **** -->
