--- a/donatello.com/common/scss/_colors.scss
+++ b/donatello.com/common/scss/_colors.scss
@@ -15,11 +15,11 @@ $link: #12aaaf;
 
 
 ////project settings
-$gray: #fcfcfc;
+$gray: #FAFAFA;
 $gray_primary: #666;
 $gray_secondary: #AAAAAA;
 $gray_third: #dddddd;
-$gray_light: #fcfcfc;
+$gray_light: #fafafa;
 
 $border: #ccc;
 
