下層 ローディングアニメ実装

--- a/_dev/_ejs/about/index.ejs
+++ b/_dev/_ejs/about/index.ejs
@@ -17,7 +17,7 @@ $scripts=null;
   <%- include($path + '_inc/_head') %>
 </head>
 <body class="about">
-   <%# $parts.loadingAnim %>   
+   <%- $parts.loadingAnim %>   
    <!-- ***** header  -->
    <%- include( $path + '_inc/_gnav', {isChild: true}) %>
    <!-- ///// header  -->
@@ -193,17 +193,12 @@ $scripts=null;
          </article>
       </section>
       <!-- /// about -->      
-
    </main>
    <!-- //// BODY END -->
-
    <%- include( $path + '_inc/_footer' ) %>
-
    <!-- ***** menu button -->
    <%- $parts.toggle %>
    <!-- //// menu button -->
-
    <%- include($path + '_inc/_scripts') %>
 </body>
-
 </html>
