--- a/_dev/_ejs/inquiry/index.ejs
+++ b/_dev/_ejs/inquiry/index.ejs
@@ -19,7 +19,7 @@ $meta.description = 'ディスクリプション';
   <%- include($path + '_inc/_head') %>
 </head>
 <body class="inquiry">
-   <%# $parts.loadingAnim %>   
+   <%- $parts.loadingAnim %>   
    <!-- ***** header  -->
    <%- include( $path + '_inc/_gnav', {isChild: true}) %>
    <!-- ///// header  -->
