--- a/_dev/_ejs/works/index.ejs
+++ b/_dev/_ejs/works/index.ejs
@@ -19,7 +19,7 @@ $meta.description = 'ディスクリプション';
  <%- include($path + '_inc/_head') %>
 </head>
 <body class="works">
-   <%# $parts.loadingAnim %>   
+   <%- $parts.loadingAnim %>   
    <!-- ***** header  -->
    <%- include( $path + '_inc/_gnav', {isChild: true}) %>
    <!-- ///// header  -->
@@ -325,12 +325,10 @@ $meta.description = 'ディスクリプション';
   </section>        
 </main>
 <!-- //// BODY END -->
-
 <%- include( $path + '_inc/_footer' ) %>
 <!-- ***** menu button -->
 <%- $parts.toggle %>
 <!-- //// menu button -->
 <%- include($path + '_inc/_scripts') %>
 </body>
-
 </html>
