--- a/_dev/_ejs/_inc/_head.ejs
+++ b/_dev/_ejs/_inc/_head.ejs
@@ -1,4 +1,4 @@
-
+     <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=Edge"> 
       <meta name="viewport" content="width=device-width,user-scalable=yes,initial-scale=1"> 
       <!-- ***** my style -->
