--- a/donatello.com/common/scss/_modules.scss
+++ b/donatello.com/common/scss/_modules.scss
@@ -204,12 +204,12 @@
 					transform: scaleX(1) translateX(0);
 					transition: all 0.3s ease 0s;
 				
-					@for $i from 1 through 7 {
-						&:nth-child( #{$i} ){
-							$delay: 0.7 + (0.15 * $i);
-							transition-delay: #{$delay}s;
-						}
-					}	
+					// @for $i from 1 through 7 {
+					// 	&:nth-child( #{$i} ){
+					// 		$delay: 0.7 + (0.15 * $i);
+					// 		transition-delay: #{$delay}s;
+					// 	}
+					// }	
 
 					//ナビ開いた状態
 					a{
