--- a/donatello.com/common/scss/_page-works.scss
+++ b/donatello.com/common/scss/_page-works.scss
@@ -102,6 +102,7 @@
 			@include break( sp ){
 				width: 1px;
 				height: 0%;
+				left: -1px;
 				border-top: none;
 				border-right: solid 1px $blue;
 			}			
