ソース改行修正

--- a/_dev/_ejs/index.ejs
+++ b/_dev/_ejs/index.ejs
@@ -88,7 +88,7 @@ $scripts=null;
                <nav >
                   <ul class="siteMap">
                      <li >
-                        <a href="index.html">
+                        <a href="/about/index.html">
                            <p class="siteMap_en">
                               ABOUT
                            </p>
@@ -98,7 +98,7 @@ $scripts=null;
                         </a>
                      </li>
                      <li >
-                        <a href="index.html">
+                        <a href="/business/index.html">
                            <p class="siteMap_en">
                               BUSINESS
                            </p>
@@ -108,7 +108,7 @@ $scripts=null;
                         </a>
                      </li>
                      <li >
-                        <a href="index.html">
+                        <a href="/works/index.html">
                            <p class="siteMap_en">
                               WORKS
                            </p>
@@ -118,7 +118,7 @@ $scripts=null;
                         </a>
                      </li>
                      <li >
-                        <a href="index.html">
+                        <a href="/recruit/index.html">
                            <p class="siteMap_en">
                               RECRUIT
                            </p>
