--- a/donatello.com/common/scss/_module-pages.scss
+++ b/donatello.com/common/scss/_module-pages.scss
@@ -40,7 +40,7 @@
 		padding-bottom: 100px;
 		position: relative;
 		z-index: 1;
-		text-shadow: 0 0 10px #666;		
+		text-shadow: 0 0 10px rgba(#000,0.3);		
 		vertical-align: middle;
 		font-size: $xlarge;
 		
