--- a/_dev/_ejs/_inc/_head.ejs
+++ b/_dev/_ejs/_inc/_head.ejs
@@ -33,4 +33,4 @@
       <meta name="twitter:title" content="<%- $meta.twitter.title %>">
       <meta name="twitter:description" content="<%- $meta.twitter.description %>">
       <meta name="twitter:image" content="<%- $meta.twitter.image %>">
-      <link rel="shortcut icon" href=""> 
+      <link rel="shortcut icon" href="<%- $path %>common/img/favicon.png"> 
