inquiryエフェクト調整

--- a/donatello.com/common/scss/_page-inquiry.scss
+++ b/donatello.com/common/scss/_page-inquiry.scss
@@ -42,6 +42,7 @@
 		p{
 			letter-spacing: 0.14em;
 			line-height: 2;
+			margin-bottom: 1.5em;
 		}
 		@include break( sp ){
 			text-align: left;
