--- a/_dev/_ejs/inquiry/index.ejs
+++ b/_dev/_ejs/inquiry/index.ejs
@@ -32,7 +32,7 @@ $meta.description = 'ディスクリプション';
          <!-- *** about -->
          <section id="supported" class="section -message">
             <article>
-               <header class="section_index">
+               <header class="section_index ef ef-main">
                 <h3>
                   <span class="section_index_en">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="430px" height="30px" text-anchor="middle" viewBox="0 0 430 30">
@@ -41,27 +41,31 @@ $meta.description = 'ディスクリプション';
                </h3>
                </header>
                <div class="section_content wrap">
-                  <p class="intro">
-                     <strong>私たち、株式会社Donatelloは、<br>
-                        お客様の業務を分析し、受託システム開発、SESを通じ<br>
-                        業務効率化・属人的ミスを軽減するための最適なシステムを提案いたします。</strong>
-                  </p>
-                  <p>
-                     「新規ビジネスにどうしてもシステム開発が必要…でも、発注先に困っている」<br>
-                     「人手が足りなくて、開発スピードが遅い」<br>
-                  「業務の効率化にこんなアイデアがある！けれど、エンジニアが社内にいない…」</p>
-                  <p>このメッセージをご覧の御社のような先進的なテクノロジーや、<br>あなたのイメージする、人々を豊かにするアイディア。<br>プロジェクトが動いている、また、新しいものが産まれる現場に、よくある事態です。</p>
-                  <p>そんなとき、私たちが力になります。</p>
-                  <p>10年以上のシステム開発経験を持つDonatelloが、<br>現場にイノベーションのキーを提供します。     
-                  </p>
-                  <p>
-                     受託開発、エンジニア育成、マネージメント。
-                  </p>
-                  <p>
-                     Donatelloの培ったスキルで、プロジェクトの成功、改善をバックアップいたします。<br>
-                     まずはお気軽にお問い合わせくださいませ。
-                  </p>
-                  <div class="toEntry">
+                  <div class="ef ef-floatup">
+                     <p class="intro">
+                        <strong>私たち、株式会社Donatelloは、<br>
+                           お客様の業務を分析し、受託システム開発、SESを通じ<br>
+                           業務効率化・属人的ミスを軽減するための最適なシステムを提案いたします。</strong>
+                     </p>
+                  </div>
+                  <div class="ef ef-floatup">
+                     <p>
+                        「新規ビジネスにどうしてもシステム開発が必要…でも、発注先に困っている」<br>
+                        「人手が足りなくて、開発スピードが遅い」<br>
+                     「業務の効率化にこんなアイデアがある！けれど、エンジニアが社内にいない…」</p>
+                     <p>このメッセージをご覧の御社のような先進的なテクノロジーや、<br>あなたのイメージする、人々を豊かにするアイディア。<br>プロジェクトが動いている、また、新しいものが産まれる現場に、よくある事態です。</p>
+                     <p>そんなとき、私たちが力になります。</p>
+                     <p>10年以上のシステム開発経験を持つDonatelloが、<br>現場にイノベーションのキーを提供します。     
+                     </p>
+                     <p>
+                        受託開発、エンジニア育成、マネージメント。
+                     </p>
+                     <p>
+                        Donatelloの培ったスキルで、プロジェクトの成功、改善をバックアップいたします。<br>
+                        まずはお気軽にお問い合わせくださいませ。
+                     </p>
+                  </div>
+                  <div class="toEntry ef ef-floatup">
                      <div class="wrap">
                         <%- include( $path + '_inc/_page-enterButton', {text: 'お問合わせはこちら'}) %> 
                         <aside class="toEntry_attention">
