--- a/donatello.com/common/css/style.css
+++ b/donatello.com/common/css/style.css
@@ -236,14 +236,20 @@ a img:focus
     content: '>';
 }.ef
 {
-    transition: all .5s ease-in-out 0s;
+    transition: all .45s ease-in-out 0s;
 }.ef.ef-floatup
 {
-    -webkit-transform: translateY(10px)                                                ;-ms-transform: translateY(10px);transform: translateY(10px);opacity: 0;
+    -webkit-transform: perspective(100px) scale(.99) translateY(10px)                                                ;transform: perspective(100px) scale(.99) translateY(10px);opacity: 0;
 }.ef.ef-floatup.doEffect
-{-webkit-transform: translateY(0)                            ;-ms-transform: translateY(0);transform: translateY(0);
+{-webkit-transform: perspective(100px) scale(1) translateY(0)                                        ;transform: perspective(100px) scale(1) translateY(0);
 
     opacity: 1;
+}.ef.ef-main
+{
+    transition: all .3s cubic-bezier(.785, .135, .15, .86) 0s;-webkit-transform: rotateX(90deg);transform: rotateX(90deg);
+}.ef.ef-main.doEffect
+{
+    -webkit-transform: rotateX(0deg)                        ;transform: rotateX(0deg);
 }.siteHeader
 {
     line-height: 1;position: fixed;z-index: 10;top: 0;right: 0;left: 0;padding-top: 40px;padding-bottom: 40px;transition: all .3s cubic-bezier(.785, .135, .15, .86) 0s;
@@ -1176,7 +1182,7 @@ a img:focus
 }.index .introduction
 {position: relative;
 
-    margin-bottom: 115px;padding-top: 75px;padding-bottom: 75px;text-align: center;color: #fff;text-shadow: 0 0 10px #aaa;
+    margin-bottom: 115px;padding-top: 75px;padding-bottom: 75px;text-align: center;color: #fff;text-shadow: 0 0 10px rgba(0,0,0,.3);
 }.index .introduction canvas
 {position: absolute;z-index: 0;top: 0;right: 0;bottom: 0;left: 0;
 
@@ -1488,7 +1494,7 @@ a img:focus
 {
     display: none;
 }.inquiry .section.-message .section_content p
-{line-height: 2;
+{line-height: 2;margin-bottom: 1.5em;
 
     letter-spacing: .14em;
 }@media screen and (max-width: 580px)
