--- a/donatello.com/common/scss/_top.scss
+++ b/donatello.com/common/scss/_top.scss
@@ -406,7 +406,7 @@
 	position: relative;
 	text-align: center;
 	color: #fff;
-	text-shadow: 0 0 10px $gray_secondary;
+	text-shadow: 0 0 10px rgba(#000,0.3);
 	@extend %dullgradation;
 	
 	canvas{
