--- a/donatello.com/common/scss/_utilities.scss
+++ b/donatello.com/common/scss/_utilities.scss
@@ -156,15 +156,24 @@
 //////////////////
 
 .ef{
-	transition: all 0.5s ease-in-out 0s ;
+	transition: all 0.45s ease-in-out 0s ;
 	
 	&.ef-floatup{
-		transform: translateY( 10px );
+
+		transform: perspective(100px)  scale( 0.99 ) translateY( 10px ) ;
 		opacity: 0;
 		
 		&.doEffect {
 			opacity: 1;
-			transform: translateY(0);	
+			transform: perspective(100px) scale(1) translateY(0);	
+		}
+	}
+	&.ef-main{
+		transition: transition();
+		transform: rotateX( 90deg );
+
+		&.doEffect {
+			transform: rotateX( 0deg );
 		}
 	}
 
