about テキスト挿入

--- a/_dev/_ejs/about/index.ejs
+++ b/_dev/_ejs/about/index.ejs
@@ -79,7 +79,7 @@ $scripts=null;
                                  学習
                               </dt>
                               <dd class="philosophyList_content">
-                                 あああああああああああ
+                                 日々の積み重ねを意識した技術習熟を意識します。
                               </dd>
                            </dl>
                         </li>
@@ -89,7 +89,7 @@ $scripts=null;
                                  教育
                               </dt>
                               <dd class="philosophyList_content">
-                                 あああああああああああ
+                                 技術を次世代へと繋ぎます。
                               </dd>
                            </dl>
                         </li>
@@ -99,7 +99,7 @@ $scripts=null;
                                  創造
                               </dt>
                               <dd class="philosophyList_content">
-                                 あああああああああああ
+                                 新しい技術を積極的に追い求めます。
                               </dd>
                            </dl>
                         </li>
@@ -109,7 +109,7 @@ $scripts=null;
                                  道徳
                               </dt>
                               <dd class="philosophyList_content">
-                                 あああああああああああ
+                                 相手の立場になり、伝えかたに工夫を行います。
                               </dd>
                            </dl>
                         </li>
@@ -119,7 +119,7 @@ $scripts=null;
                                  連携
                               </dt>
                               <dd class="philosophyList_content">
-                                 あああああああああああ
+                                 情報共有を活発にし、効率を重視します。
                               </dd>
                            </dl>
                         </li>
@@ -129,7 +129,7 @@ $scripts=null;
                                  管理
                               </dt>
                               <dd class="philosophyList_content">
-                                 あああああああああああ
+                                 個人のレベルを把握し、計画を立てて行動します。
                               </dd>
                            </dl>
                         </li>
