css圧縮、Androidロゴ表示されない問題修正

--- a/_dev/_ejs/_inc/_head.ejs
+++ b/_dev/_ejs/_inc/_head.ejs
@@ -3,7 +3,7 @@
       <meta name="viewport" content="width=device-width,user-scalable=yes,initial-scale=1"> 
       <!-- ***** my style -->
       <link rel="stylesheet" type="text/css" href="<%- $path %>common/css/nomalize.css">
-     <link rel="stylesheet" type="text/css" href="<%- $path %>common/css/style.css">      
+     <link rel="stylesheet" type="text/css" href="<%- $path %>common/css/style.min.css">      
       <%
             if( $css ){
             $css.forEach( function( current, index ){
