--- a/donatello.com/common/scss/_modules.scss
+++ b/donatello.com/common/scss/_modules.scss
@@ -24,11 +24,13 @@
 	top: 0;
 	right: 0;
 	left: 0;
-	z-index: 10;
+	z-index: 9;
 	transition: transition();
+	
  	@include break( tab ){
  		padding-top: 15px;
- 		padding-bottom: 15px;
+ 		padding-bottom: 15px; 	
+		transform: translate3d( 0,0,0 );
  	}		
 	
 	&:after{
@@ -50,6 +52,9 @@
 	}
 
 	/////// navigation open (clicked and scroll	
+	@at-root .navOpen &{
+		transform: none;
+	}
 	@at-root &.scrolled  {
 		// padding-bottom: 22px;
 		background-color: rgba(#fff, 0.95);
@@ -105,14 +110,15 @@
 		position: relative;
 		text-align: left;
 		
+		svg,
 		polygon,
 		path{
 			fill: $coporate_green;
 		}
 		
-		a{
-			color: inherit;
-		}
+		// a{
+		// 	color: inherit;
+		// }
 
 		 	@include break( tab ){
 		 		text-align: center;
@@ -122,6 +128,7 @@
 		// @at-root .navOpen &,
 		@at-root .navOpen .scrolled &{ 
 		 	@include break( tab ){			
+				svg,
 				polygon,
 				path{
 					fill: #fff;
@@ -202,7 +209,7 @@
 				li{
 					opacity: 1;
 					transform: scaleX(1) translateX(0);
-					transition: all 0.3s ease 0s;
+					transition: all 0.3s ease 0.85s;
 				
 					// @for $i from 1 through 7 {
 					// 	&:nth-child( #{$i} ){
@@ -277,7 +284,7 @@
 	li.current-menu-item
 	{
 		color: $coporate_green!important;
-		font-weight: 500;
+		// font-weight: 500;
 		a{
 			pointer-events: none;
 		}
