メール本文、Workds記述変更

--- a/_dev/_ejs/_inc/_function.ejs
+++ b/_dev/_ejs/_inc/_function.ejs
@@ -7,7 +7,7 @@
    $meta = {
       title: 'Donatello 東京のSES、システム開発、エンジニア育成',
       description: 'ディスクリプション',
-      keywords: '東京システム開発,SES,エンジニア',
+      keywords: '東京,システム開発,Java,求人,新卒採用,エンジニア',
       og:{
          title: 'og title',
          sitename: 'og sitenmae',
