--- a/_dev/_ejs/_inc/_page-enterButton.ejs
+++ b/_dev/_ejs/_inc/_page-enterButton.ejs
@@ -1,5 +1,5 @@
 <%
-	var $mailto = 'mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名】%0d%0a  %0d%0a【お名前】%0d%0a%0d%0a【ご連絡先】%0d%0aお電話： / メール：%0d%0a%0d%0a【ご連絡可能な時間帯】%0d%0a可能：○○時〜○○時 / 不可：○○時〜○○時%0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a';
+	var $mailto = 'mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名 / お名前】%0d%0a /  %0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a';
 	if( text == 'エントリー'){
 		$mailto = 'mailto:info@donatello.jp?subject=採用に関して｜サイトからのお問い合わせ&amp;body=【お名前】%0d%0a%0d%0a【ご連絡先】%0d%0aお電話： / メール：%0d%0a%0d%0a【ご連絡可能な時間帯】%0d%0a可能：○○時〜○○時 / 不可：○○時〜○○時%0d%0a%0d%0a【ご希望の就業形態】%0d%0a正社員%0d%0a%0d%0a【その他のお問い合わせ】%0d%0a';
 	}
