--- a/_dev/_ejs/about/index.ejs
+++ b/_dev/_ejs/about/index.ejs
@@ -60,7 +60,7 @@ $scripts=null;
                 </header>
                 <div class="section_content wrap">
                   <p class="intro">
-                     株式会社Donatelloでは、「テキストご支給」を掲げ、<br>
+                     株式会社Donatelloでは、「仕事を楽しく」を掲げ、<br>
                      技術の進歩と共に社会の発展に貢献します。
                   </p>
                   <section class="philosophy_chart">
