--- a/_dev/_ejs/works/index.ejs
+++ b/_dev/_ejs/works/index.ejs
@@ -75,13 +75,18 @@ $meta.description = 'ディスクリプション';
                               官公庁向けシステム開発
                            </h3>
                            <article class="work_detail_content">
-                              テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給
+                              <ul>
+                                 <li>航空関連システム</li>
+                                 <li>企業情報登録システム</li>
+                                 <li>車両関連システム</li>
+                                 <li>入札関連システム</li>
+                              </ul>
                            </article>
-                           <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                           <!-- <a href="" class="button -viewCasestudy -comingsoon">
                               <button role="link" >
                                  COMING SOON
                               </button>
-                           </a>
+                           </a> -->
                         </li>
                         <li class="work_detail">
                            <div class="work_detail_icon">
@@ -91,13 +96,15 @@ $meta.description = 'ディスクリプション';
                               ポータルサイト運営
                            </h3>
                            <article class="work_detail_content">
-                              テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給
+                              <ul>
+                                 <li>各種情報提供サイト運用</li>
+                              </ul>
                            </article>
-                           <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                           <!-- <a href="" class="button -viewCasestudy -comingsoon">
                               <button role="link" >
                                  COMING SOON
                               </button>
-                           </a>
+                           </a> -->
                         </li>
                         <li class="work_detail">
                            <div class="work_detail_icon">
@@ -107,13 +114,15 @@ $meta.description = 'ディスクリプション';
                               受注サポートシステム
                            </h3>
                            <article class="work_detail_content">
-                              テキストご支給テキストご支給テキストご支給テキストご支給テキスト
+                              <ul>
+                                 <li>自社パッケージ開発中</li>
+                              </ul>   
                            </article>
-                           <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                           <!-- <a href="" class="button -viewCasestudy -comingsoon">
                               <button role="link" >
                                  COMING SOON
                               </button>
-                           </a>
+                           </a> -->
                         </li>
                      </ul>                     
 
@@ -143,13 +152,15 @@ $meta.description = 'ディスクリプション';
                            顧客管理システムの構築
                         </h3>
                         <article class="work_detail_content">
-                           テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給
+                           <ul>
+                              <li>NPO法人様向け管理システム</li>
+                           </ul>
                         </article>
-                        <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                        <!-- <a href="" class="button -viewCasestudy -comingsoon">
                            <button role="link" >
                               COMING SOON
                            </button>
-                        </a>
+                        </a> -->
                      </li>
                      <li class="work_detail">
                         <div class="work_detail_icon">
@@ -159,13 +170,15 @@ $meta.description = 'ディスクリプション';
                            帳簿システムの構築
                         </h3>
                         <article class="work_detail_content">
-                           テキストご支給テキストご支給テキストご支給テキストご支給テキスト
+                           <ul>
+                              <li>公的書類等生成サポートシステム</li>
+                           </ul>
                         </article>
-                        <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                        <!-- <a href="" class="button -viewCasestudy -comingsoon">
                            <button role="link" >
                               COMING SOON
                            </button>
-                        </a>
+                        </a> -->
                      </li>
                   </ul>                     
                </div>
@@ -196,7 +209,7 @@ $meta.description = 'ディスクリプション';
                       <!--                           <article class="work_detail_content">
                          テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給
                       </article> -->
-                      <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                      <a class="button -viewCasestudy -comingsoon">
                         <button role="link" >
                            COMING SOON
                         </button>
@@ -212,7 +225,7 @@ $meta.description = 'ディスクリプション';
                            <!-- <article class="work_detail_content">
                               テキストご支給テキストご支給テキストご支給テキストご支給テキスト
                            </article> -->
-                           <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                           <a class="button -viewCasestudy -comingsoon">
                               <button role="link" >
                                  COMING SOON
                               </button>
