--- a/_dev/_ejs/_inc/_function.ejs
+++ b/_dev/_ejs/_inc/_function.ejs
@@ -2,12 +2,12 @@
    $scripts = new Array(),
    $scripts_global=new Array();
 
-   $keyword = 'Donatello - 東京のSES、システム開発、エンジニア育成※さんぷる';
+   $keyword = 'Donatello - 東京の受託システム開発（Java）、SE/プログラマーのSES、';
 
    $meta = {
-      title: 'Donatello 東京のSES、システム開発、エンジニア育成',
-      description: 'ディスクリプション',
-      keywords: '東京,システム開発,Java,求人,新卒採用,エンジニア',
+      title: 'Donatello 東京のシステム開発会社 SESによるエンジニア(SE)就職支援',
+      description: 'システム/アプリ開発、SESによるエンジニア(SE)/プログラマー就職のスキルアップを支援',
+      keywords: '東京,システム開発,Java,求人,新卒採用,エンジニアプログラマー,未経験',
       og:{
          title: 'og title',
          sitename: 'og sitenmae',
