--- a/donatello.com/common/css/style.css
+++ b/donatello.com/common/css/style.css
@@ -976,6 +976,12 @@ a img:focus
     {font-size: 30px;
         line-height: 1.4;margin-bottom: 20px;
     }
+}@media screen and (max-width: 580px) and (max-height: 480px)
+{
+    .index .mainvisual_copy_en
+    {
+        font-size: 27px;
+    }
 }.index .mainvisual_copy_ja
 {font-size: 1.64286em;
     font-weight: 500;letter-spacing: .33em;
@@ -1089,6 +1095,13 @@ a img:focus
     .index .mainvisual .building_behind
     {
         width: 1080px;
+    }
+}@media screen and (max-width: 580px) and (max-height: 480px)
+{
+    .index .mainvisual .building_front,
+    .index .mainvisual .building_behind
+    {
+        width: 800px;
     }
 }.index .mainvisual .building_front
 {z-index: 3;
