--- a/donatello.com/common/scss/_top.scss
+++ b/donatello.com/common/scss/_top.scss
@@ -106,6 +106,10 @@
 				line-height: 1.4;
 				margin-bottom: 20px;
 				font-size: 30px;
+	
+				@include break( 480, max, height )	{
+					font-size: 27px;
+				}			
 			}
 		}
 		&_ja{
@@ -248,7 +252,11 @@
 			
 			@include break( sp ){
 				width: 1080px;
-			}			
+				@include break( 480, max, height )	{
+					width: 800px;
+				}
+			}		
+
 		}
 
 		
