--- a/donatello.com/common/scss/_top.scss
+++ b/donatello.com/common/scss/_top.scss
@@ -172,6 +172,16 @@
 			@extend %beforeStyle;
 		}		
 	}
+
+
+	.cloudWrapper{
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+	
 	.cloud{
 		height: 100%;
 		@extend %parentStyle;
