barba test init

--- a/_dev/_ejs/_inc/_head.ejs
+++ b/_dev/_ejs/_inc/_head.ejs
@@ -2,8 +2,8 @@
       <meta http-equiv="X-UA-Compatible" content="IE=Edge"> 
       <meta name="viewport" content="width=device-width,user-scalable=yes,initial-scale=1"> 
       <!-- ***** my style -->
-      <link rel="stylesheet" type="text/css" href="<%- $path %>common/css/nomalize.css">
-     <link rel="stylesheet" type="text/css" href="<%- $path %>common/css/style.min.css">      
+      <link rel="stylesheet" type="text/css" href="<%# $path %>/common/css/nomalize.css">
+     <link rel="stylesheet" type="text/css" href="<%# $path %>/common/css/style.min.css">      
       <%
             if( $css ){
             $css.forEach( function( current, index ){
