--- a/_dev/_ejs/_inc/_scripts.ejs
+++ b/_dev/_ejs/_inc/_scripts.ejs
@@ -5,6 +5,7 @@ src="https://code.jquery.com/jquery-3.2.1.min.js"
 integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 crossorigin="anonymous"></script>
 <%# $path common/js/pjax/spica.js"> $path common/js/pjax/localsocket.js"> $path common/js/pjax/pjax-api.js"> $path common/js/pjax/config.js"></script> %>
+<script type="text/javascript" src="/common/js/pjax/barba.min.js"></script>
  <%
       if($scripts_global){
         $scripts_global.forEach( function( script ){
