--- a/_dev/_ejs/recruit/index.ejs
+++ b/_dev/_ejs/recruit/index.ejs
@@ -18,12 +18,12 @@ $meta.description = 'ディスクリプション';
 <head>
  <%- include($path + '_inc/_head') %>
 </head>
-<body class="recruit">
+<body id="barba-wrapper" class="recruit">
    <%- $parts.loadingAnim %>   
    <!-- ***** header  -->
    <%- include( $path + '_inc/_gnav', {isChild: true}) %>
    <!-- ///// header  -->
-   <div id="fetchContent" data-content="recruit">
+   <div id="fetchContent" class="barba-container" data-content="recruit">
       <!-- ***** mainvisual -->
       <%- include( $path + '_inc/_page-headingArea', {copy:{en: 'RECRUITING', ja: '採用情報'} }) %>
       <!-- ///// mainvisual  -->
