--- a/_dev/_ejs/_inc/_function.ejs
+++ b/_dev/_ejs/_inc/_function.ejs
@@ -2,24 +2,23 @@
    $scripts = new Array(),
    $scripts_global=new Array();
 
-   $keyword = 'Donatello - 東京の受託システム開発（Java）、SE/プログラマーのSES、';
+   $keyword = 'Donatello - 東京の受託システム/アプリ開発、SE/プログラマーのSES';
 
    $meta = {
       title: 'Donatello 東京のシステム開発会社 SESによるエンジニア(SE)就職支援',
       description: 'システム/アプリ開発、SESによるエンジニア(SE)/プログラマー就職のスキルアップを支援',
       keywords: '東京,システム開発,Java,求人,新卒採用,エンジニアプログラマー,未経験',
       og:{
-         title: 'og title',
-         sitename: 'og sitenmae',
-         description: 'og desc',
+         title: 'Donatello 東京のシステム開発会社 SESによるエンジニア(SE)就職支援',
+         sitename: 'Donatello co.Ltd',
+         description: '受託システム/アプリ開発、SESによるエンジニア(SE)/プログラマー就職のスキルアップを支援する会社',
          type: 'website',
-         image: 'image',
-         url: 'og url'
+         image: 'http://donatello.jp/common/img/ogp.jpg',
+         url: 'http://donatello.jp/'
       },
       twitter:{
-         title: '',
-         description: 'twitter: des',
-         image: '',
+         title: 'Donatello',
+         description: '受託システム/アプリ開発、SESによるエンジニア(SE)/プログラマー就職のスキルアップを支援する会社',
       }
    }
 
