--- a/_dev/_ejs/about/index.ejs
+++ b/_dev/_ejs/about/index.ejs
@@ -3,7 +3,7 @@
 <html lang="ja" class="ie">
 <![endif]-->
 <!--[if !IE]<!-->
-<html lang="ja">
+<html lang="ja" prefix="og: http://ogp.me/ns#">
 <!--<![endif]-->
 <% include('../_inc/_function') %>   
 <%
