--- a/_dev/_ejs/index.ejs
+++ b/_dev/_ejs/index.ejs
@@ -3,7 +3,7 @@
 <html lang="ja" class="ie">
 <![endif]-->
 <!--[if !IE]<!-->
-<html lang="ja">
+<html lang="ja" prefix="og: http://ogp.me/ns#">
    <!--<![endif]-->
    <% include('_inc/_function') %>   
 <%
@@ -57,10 +57,10 @@ $scripts=null;
          </section>
          <section class="introduction">
             <div class="wrap">
-               <header class="introduction_index ef ef-dup">
+               <header class="introduction_index">
                   <h3>"DEVELOP FOR THE FURUTE."</h3>
                </header>
-               <p class="introduction_content ef ef-floatup" data-delay='0.2' >
+               <p class="introduction_content" >
                   私たち、株式会社Donatelloは、<br>お客様の業務を分析し、<br class="spShow">受託システム開発・SESを通じ<br>
                   業務効率化・属人的ミスを軽減するための<br class="spShow">最適なシステムを提案いたします。
                </p>
