--- a/_dev/_ejs/_inc/_head.ejs
+++ b/_dev/_ejs/_inc/_head.ejs
@@ -38,9 +38,10 @@
       <meta property="og:type" content="<%- $meta.og.type %>">
       <meta property="og:image" content="<%- $meta.og.image %>">
       <meta property="og:url" content="<%- $meta.og.url %>">
+      <meta property="fb:app_id" content="341652896351256">
+      <meta property="article:publisher" content="https://www.facebook.com/%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BEDonatello-1103021019747652/">
       <meta name="twitter:card" content="summary">
       <!-- <meta name="twitter:site" content="@flickr" > -->
       <meta name="twitter:title" content="<%- $meta.twitter.title %>">
       <meta name="twitter:description" content="<%- $meta.twitter.description %>">
-      <meta name="twitter:image" content="<%- $meta.twitter.image %>">
       <link rel="shortcut icon" href="<%- $path %>common/img/favicon.png"> 
