--- a/donatello.com/common/css/style.css
+++ b/donatello.com/common/css/style.css
@@ -712,7 +712,7 @@ a img:focus
 }#loadingAnim
 {position: fixed;z-index: 11;top: 0;right: 0;bottom: 0;left: 0;display: -webkit-box;display: -webkit-flex;display: -ms-flexbox;display:         flex;overflow: hidden;flex-direction: row;
 
-    width: 100%;height: 100%;transition: all .5s cubic-bezier(.785, .135, .15, .86) 0s;transition-delay: 1s;background-color: #0c3fff;-webkit-box-orient: horizontal;-webkit-box-direction: normal;-webkit-flex-direction: row;-ms-flex-direction: row;-webkit-box-pack: center;-webkit-justify-content: center;-ms-flex-pack: center;justify-content: center;-webkit-box-align: center;-webkit-align-items: center;-ms-flex-align: center;align-items: center;
+    width: 100%;height: 100%;transition-delay: 1s;background-color: #0c3fff;-webkit-box-orient: horizontal;-webkit-box-direction: normal;-webkit-flex-direction: row;-ms-flex-direction: row;-webkit-box-pack: center;-webkit-justify-content: center;-ms-flex-pack: center;justify-content: center;-webkit-box-align: center;-webkit-align-items: center;-ms-flex-align: center;align-items: center;
 }#loadingAnim svg
 {
     width: 100px;height: 100px;transition: all .3s cubic-bezier(.785, .135, .15, .86) 0s;fill: none;
@@ -727,7 +727,7 @@ a img:focus
     transition: all .3s cubic-bezier(.785, .135, .15, .86) 0s;fill: #8bffac;
 }.isLoaded #loadingAnim
 {
-    left: -10%;width: 0;
+    left: -10%;width: 0;transition: all .5s cubic-bezier(.785, .135, .15, .86) 0s;
 }.isLoaded #loadingAnim text
 {
     -webkit-transform: rotateY(90deg)                        ;transform: rotateY(90deg);
