--- a/_dev/_ejs/business/index.ejs
+++ b/_dev/_ejs/business/index.ejs
@@ -283,7 +283,7 @@ $meta.description = 'ディスクリプション';
                <text x="150" y="19" fill="url(#gradation)">SUPPORTED LANGUAGE</text></svg></span>
             </span>
             <span class="section_index_ja">
-              会社概要
+              使用言語
            </span>
         </h3>
      </header>
@@ -307,10 +307,6 @@ $meta.description = 'ディスクリプション';
       <tr>
          <th>その他</th>
          <td>Excel / Access VBA</td>
-      </tr>
-      <tr>
-         <th>従業員数</th> 
-         <td>5名（契約社員・パートナー含む）</td>
       </tr>
    </table>
 </div>
